k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-staging
  namespace: webapps-staging
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: webapp-staging
  template:
    metadata:
      labels:
        app: webapp-staging
    spec:
      containers:
        - name: webapp-staging
          image: registry.shuttlewhizz.com/webapp-staging:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
      imagePullSecrets:
        - name: regcred
