k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: webapps
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
