k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress-staging
  namespace: webapps-staging
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kube-staging.shuttlewhizz.com
      secretName: tls-secret-staging
  rules:
    - host: kube-staging.shuttlewhizz.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service-staging
                port:
                  number: 80
